feat(updates jena versions): updates jena versions / adds semantic release (#2)
* updates dependencies

* feat(first release): adds semantic release